--- a/frontend/webportal/src/index.css
+++ b/frontend/webportal/src/index.css
@@ -1,59 +1,70 @@
 @font-face {
-    font-family: "WorkSans";
-    src: url("./Assets/Fonts/WorkSans/WorkSans-SemiBold.woff2");
+    font-family: WorkSans;
+    src: url(./Assets/Fonts/WorkSans/WorkSans-SemiBold.woff2);
     font-weight: bold;
 }
 @font-face {
-    font-family: "WorkSans";
-    src: url("./Assets/Fonts/WorkSans/WorkSans-Bold.woff2");
+    font-family: WorkSans;
+    src: url(./Assets/Fonts/WorkSans/WorkSans-Bold.woff2);
     font-weight: bolder;
 }
 @font-face {
-    font-family: "WorkSans";
-    src: url("./Assets/Fonts/WorkSans/WorkSans-Regular.woff2");
+    font-family: WorkSans;
+    src: url(./Assets/Fonts/WorkSans/WorkSans-Regular.woff2);
     font-weight: normal;
 }
 
 :root {
     /* colors */
-    --primary: "#51B1A6";
-    --secondary: "#5E5BD9";
-    --backgorundBlack: "#24243F";
-    --backgroundDark: "#E1E5EB";
-    --background: "#FAFCFE";
-    --white: "#FFFFFF";
-    --text: "#5A5A75";
-    --subText: "#8C8CA1";
-    --error: "#ED4B68";
-    --success: "#31D0AA";
-    --warning: "#FFB802";
+    --primary: #51B1A6;
+    --secondary: #5E5BD9;
+    --backgorundBlack: #24243F;
+    --backgroundDark: #E1E5EB;
+    --background: #FAFCFE;
+    --white: #FFFFFF;
+    --text: #5A5A75;
+    --subText: #8C8CA1;
+    --error: #ED4B68;
+    --success: #31D0AA;
+    --warning: #FFB802;
+    --accent: #F5F7FA;
+
     
     /* typography */
         /* size */
-        --small: "18px";
-        --regular: "20px";
-        --big: "24px";
-        --titleSmall: "32px";
-        --titleBig: "36px";
-        --header2: "48px";
-        --header1: "64px";
+        /* --small: 18px;
+        --regular: 20px;
+        --big: 24px;
+        --titleSmall: 32px;
+        --titleBig: 36px;
+        --header2: 48px;
+        --header1: 64px; */
+        --small: 18px;
+        --regular: 20px;
+        --big: 24px;
+        --titleSmall: 32px;
+        --titleBig: 38px;
+        --header2: 48px;
+        --header1: 64px;
+
+        --monsterText: 30px;
         
         /* fontWeight */
-        --regular: "normal";
-        --semiBold: "bold";
-        --bold: "bolder";
+        --regular: normal;
+        --semiBold: bold;
+        --bold: bolder;
         
         /* letterSpacing */
-        --normal: "-0.015em";
-        --spread: "0.2em";
+        --normal: -0.02em;
+        --spread: 0.2em;
 
         /* lineHeight */
-        --lineHeight: "1.4em";
+        --lineHeight: 1.4em;
     
 }
 
-.App {
-    font-family: "WorkSans";
+* {
+    font-family: WorkSans;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
