Dodano podsawowe komunikaty o poprawnym kodzie (wyswietla sie pokoj, godzina i kod ticketa) lub niewlasciwym. Usunieto podawanie emaila w panelu.

--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -36,7 +36,7 @@
     width: 500px;
     padding: 12px;
     text-align: center;
-    font-size: var(--titleBig);
+    font-size: 25px;
     font-weight: var(--bold);
     letter-spacing: var(--spread);
     color: var(--subText);
