--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -8,6 +8,10 @@
     flex-direction: column;
 }
 
+.successLabel {
+    background-color: var(--success);
+}
+
 .wrongCodeLabel {
     background-color: var(--error);
 }
