[R][I][F] Przebudowano niektóre kontrolery, przebudowano i usprawniono potwierdzenie wizyty, naprawiono obsługę wielu kolejek, dodano obsługę wcześniej potwierdzonej wizyty

--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -8,6 +8,10 @@
     flex-direction: column;
 }
 
+.defaultLabel {
+    background-color: var(--primary);
+}
+
 .successLabel {
     background-color: var(--success);
 }
