--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -1,6 +1,6 @@
 .containerBackground {
     box-shadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1), 0px 1px 1px rgba(0, 0, 0, 0.05);
-    border-radius: 24px;
+    border-radius: var(--radiusNormal);
     padding-top: 45px;
     width: 740px;
     display: flex;
@@ -28,7 +28,7 @@
     background-color: var(--white);
     width: 100%;
     height: 100%;
-    border-radius: 24px;
+    border-radius: var(--radiusNormal);
     padding: 60px;
     text-align: center;
 }
@@ -48,7 +48,7 @@
 .input {
     background-color: var(--accent);
     border: 0;
-    border-radius: 15px;
+    border-radius: var(--radiusSmall);
     height: 80px;
     width: 500px;
     padding: 12px;
@@ -66,7 +66,7 @@
     text-align: center;
     color: var(--white);
     background-color: var(--primary);
-    border-radius: 15px;
+    border-radius: var(--radiusSmall);
     border: 0;
     font-size: var(--titleBig);
     font-weight: var(--bold);
@@ -107,7 +107,7 @@
     margin-top: 40px;
     transition: 0.2s;
     border: 1px solid var(--text);
-    border-radius: 15px;
+    border-radius: var(--radiusSmall);
     padding: 10px 40px;
 }
 
