--- a/frontend/webportal/src/Modules/ConfirmationPanel/HelloScreen.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/HelloScreen.module.css
@@ -14,7 +14,7 @@
 .logo {
     font-weight: var(--bold);
     font-size: var(--header1);
-    color: var(--white); 
+    color: var(--white);
     letter-spacing: var(--spread);
     text-align: center;
 }
@@ -24,7 +24,7 @@
     height: 0.5em;
     background-color: var(--white);
     align-self: center;
-    border-radius: 15px;
+    border-radius: var(--radiusSmall);
 }
 
 .clock {
@@ -35,10 +35,11 @@
     text-align: center;
 }
 
-.info, .clickMe {
+.info,
+.clickMe {
     font-weight: var(--bold);
     font-size: var(--header2);
-    color: var(--white); 
+    color: var(--white);
     letter-spacing: var(--normal);
     text-align: center;
 }
