--- a/frontend/webportal/src/index.css
+++ b/frontend/webportal/src/index.css
@@ -78,6 +78,7 @@
     --accent: #F5F7FA;
     --accentDark: #E1E5EB;
     --dark: #132735;
+    --darkHover: #0e1d27;
 
     /* typography */
     /* size */
@@ -106,6 +107,10 @@
 
     /* lineHeight */
     --lineHeight: 1.4em;
+
+    /* round radius */
+    --radiusSmall: 15px;
+    --radiusNormal: 24px;
 }
 
 * {
