[N][R] Dodano tworzenie rezerwacji przez GUI bez wysyłania maila - wersja rozwojowa (do usprawnienia css i zwijanie kart po wyborze) [Known issue] - błąd przy zmianach daty podczas wyboru - trzebe zrewidować wszystkie operacje na datach.

--- a/frontend/webportal/src/Modules/Registration/DatePicker.css
+++ b/frontend/webportal/src/Modules/Registration/DatePicker.css
@@ -9,11 +9,11 @@
     --rdp-outline-selected: 3px solid var(--rdp-accent-color);
     /* Outline border for focused _and_ selected elements */
 
-    margin: 1em;
+    padding: 2rem;
 }
 
 .rdp-caption {
-    font-size: var(--regular);
+    font-size: var(--normal);
 }
 
 .rdp-months {
@@ -21,16 +21,16 @@
 }
 
 .rdp-head {
-    font-size: var(--regular);
+    font-size: var(--normal);
 }
 
 .rdp-tbody {
-    font-size: var(--regular);
+    font-size: var(--normal);
 }
 
 .rdp-tfoot>tr>td>p {
     text-align: center;
-    font-size: var(--regular);
+    font-size: var(--normal);
     margin: 20px;
 }
 
