--- a/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/CentralBox.module.css
@@ -36,7 +36,7 @@
 .text {
     font-weight: var(--semiBold);
     color: var(--dark);
-    letter-spacing: var(--normal);
+    letter-spacing: var(--normalSpacing);
     font-size: var(--monsterText);
 }
 
@@ -98,7 +98,7 @@
 .buttonNew {
     font-weight: var(--semiBold);
     color: var(--text);
-    letter-spacing: var(--normal);
+    letter-spacing: var(--normalSpacing);
     font-size: var(--monsterText);
     background-color: transparent;
     border: 0;
@@ -152,7 +152,7 @@
 .ConfirmationDataLabel {
     font-weight: var(--semiBold);
     color: var(--dark);
-    letter-spacing: var(--normal);
+    letter-spacing: var(--normalSpacing);
     font-size: var(--monsterText);
     font-size: var(--titleBig);
     margin-right: 25px;
