--- a/frontend/webportal/src/Modules/ConfirmationPanel/HelloScreen.module.css
+++ b/frontend/webportal/src/Modules/ConfirmationPanel/HelloScreen.module.css
@@ -31,7 +31,7 @@
     font-weight: var(--bold);
     font-size: 128px;
     color: var(--white);
-    letter-spacing: var(--normal);
+    letter-spacing: var(--normalSpacing);
     text-align: center;
 }
 
@@ -40,7 +40,7 @@
     font-weight: var(--bold);
     font-size: var(--header2);
     color: var(--white);
-    letter-spacing: var(--normal);
+    letter-spacing: var(--normalSpacing);
     text-align: center;
 }
 
