[N] Dodano obsługę wysyłania maili z numerem rezerwacji

--- a/frontend/webportal/src/Modules/Registration/ReservationConfirmation.module.css
+++ b/frontend/webportal/src/Modules/Registration/ReservationConfirmation.module.css
@@ -94,6 +94,8 @@
     padding-left: 1rem;
     letter-spacing: var(--spreadSpacing);
     font-weight: bold;
+    margin-top: -1rem;
+    margin-bottom: 1.5rem;
 }
 
 .createReservationButton {
