--- a/frontend/webportal/src/Modules/Registration/Registration.module.css
+++ b/frontend/webportal/src/Modules/Registration/Registration.module.css
@@ -1,9 +1,10 @@
 .helloScreen {
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--primary);
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     background-image: url(../../Assets/Images/logo_BG.svg);
     background-repeat: no-repeat;
     background-position: center;
@@ -149,10 +150,9 @@
 .footer {
     background-color: var(--dark);
     text-align: center;
-    font-weight: var(--normalWeight);
-    letter-spacing: var(--normalSpacing);
+    letter-spacing: var(--spreadSpacing);
     font-size: var(--small);
-    color: var(--subText);
+    color: var(--accentDark);
     padding: 15px 0;
 }
 
@@ -175,8 +175,14 @@
 .separator {
     width: 100%;
     height: 3px;
-    background-color: var(--accentDark);
+    background-color: var(--success);
     margin: 30px 0;
+}
+
+.summaryBackground {
+    background-color: var(--success);
+    padding-top: 45px;
+    border-radius: var(--radiusNormal);
 }
 
 .summary {
@@ -184,6 +190,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--background);
+    padding: 40px;
+    box-shadow: 0px 20px 36px -8px rgba(14, 14, 44, 0.1);
+    border-radius: var(--radiusNormal);
 }
 
 .summary_code {
@@ -213,7 +223,7 @@
     font-weight: var(--semiBold);
     letter-spacing: var(--normalSpacing);
     font-size: var(--titleBig);
-    color: var(--text);
+    /* color: var(--text); */
 }
 
 .summary_btn {
