--- a/frontend/webportal/src/Modules/LoginPanel/LoginPanel.module.css
+++ b/frontend/webportal/src/Modules/LoginPanel/LoginPanel.module.css
@@ -1,8 +1,11 @@
+.loginWrapper {
+    margin-top: 5em;
+}
+
 .main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
 }
 
 .logo {
@@ -25,6 +28,7 @@
 }
 
 .label {
+    margin-left: 0.5rem;
     color: var(--subText);
     font-size: var(--big);
     font-weight: var(--semiBold);
@@ -57,18 +61,26 @@
 }
 
 .submitButton {
-    background-color: transparent;
-    border-width: 0;
-    color: var(--subText);
-    font-size: var(--big);
     font-weight: var(--semiBold);
-    margin-top: 24px;
+    font-size: var(--big);
+    text-decoration: none;
+    color: var(--accent);
+    background-color: var(--primary);
+    border: 2px solid var(--primary);
     cursor: pointer;
-    transition: 0.2s;
+    border-radius: var(--radiusSmall);
+    padding: 1rem 2rem;
+    margin: 2rem auto;
+    transition: 0.3s;
+    box-shadow: 0 0 30px #64acc469;
+    display: flex;
+    align-items: center;
 }
 
 .submitButton:hover {
-    color: var(--dark);
+    background-color: var(--primaryHover);
+    border: 2px solid var(--primaryHover);
+    box-shadow: 0 0 30px #50a1bcc7;
 }
 
 .loginForm {
@@ -84,7 +96,7 @@
 
 .errorMsg {
     color: var(--error);
-    font-size: var(--big);
+    font-size: var(--normal);
     font-weight: var(--semiBold);
     margin-top: 24px;
 }
